@@ -80,6 +80,7 @@ The following people and organizations have contributed code to XCSoar:
  Wolfgang Drescher <drescher.wolfgang@gmail.com>
  Piotr Gertz <piotr@piopawlu.net>
  Yorick Reum <xcsoar@yorickreum.de>
+ Roland Niederhagen <ronald_niederhagen@freenet.de>
 
 Documentation:
 
